--- a/css/style-main.css
+++ b/css/style-main.css
@@ -62,7 +62,7 @@ body {
 	height: 30vw;
 	z-index: 5;
 	opacity: 0;
-	-webkit-animation: bounceInRightText 20s 1.5s ease infinite;
+	-webkit-animation: lightSpeedIn1 20s 1.5s ease infinite;
 	-webkit-animation-fill-mode: forwards;
 
 	 /* Hey browser, use your GPU */
@@ -77,7 +77,7 @@ body {
 	height: 30vw;
 	z-index: 5;
 	opacity: 0;
-	-webkit-animation: bounceInRightText 20s 11.5s ease infinite;
+	-webkit-animation: lightSpeedIn1 20s 11.5s ease infinite;
 	-webkit-animation-fill-mode: forwards;
 	
 	 /* Hey browser, use your GPU */
@@ -104,7 +104,7 @@ body {
 	top:5vh;
 	left:63vw;
 	opacity: 0;
-	-webkit-animation: bounceInRightImage 20s .8s ease infinite;
+	-webkit-animation: lightSpeedIn1 20s .8s ease infinite;
 	-webkit-animation-fill-mode: forwards;
 	 /* Hey browser, use your GPU */
    	-webkit-transform: translate3d(0, 0, 0);
@@ -123,7 +123,7 @@ body {
 	top:5vh;
 	left:63vw;
 	opacity: 0;
-	-webkit-animation: bounceInRightImage 20s 10.8s ease infinite;
+	-webkit-animation: lightSpeedIn1 20s 10.8s ease infinite;
 	-webkit-animation-fill-mode: forwards;
 	 /* Hey browser, use your GPU */
    	-webkit-transform: translate3d(0, 0, 0);
